// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests in GifContainer Component Should render items with the return data of useFetchGifs 1`] = `
<div
  className="gif-container"
>
  <h3
    className="gif-container__title"
  >
    Results for 
    Messi
  </h3>
  <Masonry
    breakpointCols={
      Object {
        "1100": 3,
        "500": 1,
        "700": 2,
        "default": 3,
      }
    }
    className="my-masonry-grid"
    columnClassName="my-masonry-grid_column"
  >
    <Gif
      id="test"
      key="test"
      title="test"
      url="https://test.com/image/test.gif"
    />
    <Gif
      id="123"
      key="123"
      title="test"
      url="https://test.com/image/test.gif"
    />
  </Masonry>
</div>
`;

exports[`Tests in GifContainer Component Should render properly 1`] = `
<div
  className="gif-container"
>
  <h3
    className="gif-container__title"
  >
    Results for 
    Messi
  </h3>
  <Spinner />
  <Masonry
    breakpointCols={
      Object {
        "1100": 3,
        "500": 1,
        "700": 2,
        "default": 3,
      }
    }
    className="my-masonry-grid"
    columnClassName="my-masonry-grid_column"
  />
</div>
`;
